# healthKiran-server/src/main/java/com/health/kiran/repository/BookingRepository.java
@@ -1,0 +1,10 @@
+package com.health.kiran.repository;
+
+import com.health.kiran.model.Booking;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.stereotype.Repository;
+
+@Repository
+public interface BookingRepository extends JpaRepository<Booking, Long>{
+
+}
